# archadvisor

./: ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: architect.py  base.py  cost_analyzer.py  devils_advocate.py  documentation.py
backend/app/api/: health.py  router.py  sessions.py  websocket.py
backend/app/graph/: nodes.py  state.py  validator_node.py  workflow.py
backend/app/models/: events.py  requests.py  responses.py
backend/app/services/: event_bus.py  rate_limiter.py  session_manager.py
backend/app/validators/: __init__.py  availability_validator.py  base.py  capacity_validator.py  consistency_validator.py  contradiction_validator.py  domain_pattern_validator.py  engine.py  missing_requirement_validator.py  models.py  operational_complexity_validator.py  reference_data.py  schema_validator.py
backend/app/validators/domain_rules/: __init__.py  chat_messaging.json  ecommerce.json  loader.py  notification_system.json  payments.json  social_feed.json  url_shortener.json
frontend-react/: index.html  package-lock.json  package.json  vite.config.ts
frontend-react/src/: App.tsx  index.css
frontend-react/src/components/: InputView.tsx  ProcessingView.tsx  ResultsView.tsx  Sidebar.tsx
frontend-react/src/hooks/: useWebSocket.ts
frontend-react/src/services/: api.ts
frontend-react/src/types/: api.ts  constants.ts
